@startuml ptp_machine_class_diagram

title PTPMachine: Class Diagram

legend top left
    |= Color            |= Description                 |
    | <#Beige>          | Base classes                 |
    | <#Wheat>          | PtpMachine                   |
endlegend

class "PtpTimeInfo" as time_info #Beige {
    +ptp: uint64
    +local_time: uint64
    +status: int
}

abstract class "BaseMachine" as base_machine #Beige {
    +GetName(): string
    +Init(): bool
}

abstract class "ProactiveMachine" as proactive_machine #Beige {
    +Start(): void
    +Stop(): void
}

abstract class "PeriodicMachine" as periodic_machine #Beige {
    #PeriodicTask(): void
}

abstract class "Producer<T>" as producer #Beige {
    +SetPublishCallback(callback): void
    #Publish(data: T): void
}

class "PTPMachine<PTPEngine>" as ptp_machine #Wheat {
    -engine_impl_: PTPEngine*
    -publish_callback_: function
    +Init(): bool
    +SetPublishCallback(callback): void
    #PeriodicTask(): void
}

class "GPTPEngine" as gptp_engine #Wheat {
    +Initialize(): bool
    +Deinitialize(): void
    +ReadPTPSnapshot(): PtpTimeInfo
}

base_machine <|-- proactive_machine
proactive_machine <|-- periodic_machine
periodic_machine <|-- ptp_machine
producer <|.. ptp_machine

ptp_machine *-- gptp_engine : uses

ptp_machine --> time_info : produces

note right of gptp_engine
    Wrapps the platfrom specific
    GPTP stack interaction logic
end note

@enduml
